welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:9: error: not found: value Z
	if (litMessage()==Z)
                          ^