welcome.lessons.welcome.bdr.BDR.scala.code
var fini=false
while (fini==false)
{

if (estSurMessage)
{
	litMessage()
	if (litMessage()==Z)
	recule()
} else {
	fini=true
}

}